# pmon-ai-ops

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pmon.py  start-all.ps1  stop-all.ps1
.github/workflows/: ci.yml  docker.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  start_backend.bat  test_cfg_quick.py  test_e2e.py  test_llm_sdv.py
backend/scripts/: mock_tftp_push.py
backend/src/: __init__.py  config.py  constants.py  main.py
backend/src/api/: __init__.py  deps.py  disasm_router.py  llm_router.py  router.py  websocket.py
backend/src/core/ai_engine/: __init__.py  client.py  cot_parser.py  patch_generator.py  prompt_builder.py
backend/src/core/listener/: __init__.py  log_parser.py  models.py  tftp_watcher.py
backend/src/core/notifier/: __init__.py  dispatcher.py  manager.py
backend/src/core/preprocessor/: __init__.py  context_extractor.py  error_detector.py  normalizer.py
backend/src/schemas/: __init__.py  alert.py  disasm.py  llm_log.py  log.py  ws_message.py
backend/src/services/: __init__.py  cfg_service.py  code_index_service.py  disasm_service.py  flirt_service.py  health.py  llm_analysis_service.py  memory_service.py  pipeline.py
backend/src/utils/: __init__.py  diff_formatter.py  file_utils.py  logger.py
backend/tests/: conftest.py  test_cfg_quick.py  test_disasm_api.py  test_disasm_service.py  test_e2e.py  test_flirt_service.py  test_llm_sdv.py  test_sdv.py
docker/: docker-compose.yml
docker/nginx/: nginx.conf
docs/: ARCHITECTURE.md  COMPONENT_ARCHITECTURE.md
docs/architecture/: overview.md
docs/development/: setup.md
scripts/: setup.sh
tools/: http_proxy.py  https_proxy.py  query_db.py  screenshot.cjs
